[package]
name = "tinyvm"
version = "0.1.0"
authors = ["Ben Wiederhake <BenWiederhake.GitHub@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.39", features = ["default", "derive"] }
getrandom = "0.3.3"
lazy_static = "1.5.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
